changes made to hawaiian-pizza.html

--- a/recipes/hawaiian-pizza.html
+++ b/recipes/hawaiian-pizza.html
@@ -1,5 +1,5 @@
-<<<<<<< HEAD
-DOCTYPE html>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -31,6 +31,5 @@ DOCTYPE html>
     </ol>
 </body>
 </html>
-=======
 
->>>>>>> c720523811b345a1effd4bb5d0303464f96121c2
+
