--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="index.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/banana-bread.html">Banana Bread</a>
-    <a href="recipes/hawaiian-pizza.html">Hawaiian Pizza</a>
-    <a href="recipes/fried-chicken.html">Fried Chicken</a>
+    <div class="title">
+        <h1>Odin Recipes</h1>
+    </div>
+    <div class="listing">
+        <a href="recipes/banana-bread.html">Banana Bread</a>
+        <a href="recipes/hawaiian-pizza.html">Hawaiian Pizza</a>
+        <a href="recipes/fried-chicken.html">Fried Chicken</a>
+    </div>
 </body>
 </html>
